# diesel_duckdb

./: .gitignore  Cargo.toml  README.md
src/: backend.rs  bind_collector.rs  chrono_support.rs  connection.rs  error.rs  lib.rs  query_builder.rs  query_fragments.rs  types.rs
src/tests/: chrono_test.rs  mod.rs  schema.rs
